2005-01-03  Stepan Kasal  <kasal@ucw.cz>

	A cleanup of the diversion support in m4sugar.

	* lib/m4sugar/m4sugar.m4 (_m4_divert): A typo in description.
	(_m4_divert_n_stack): New macro; the expansion is
	  <newline>m4_divert_stack, if m4_divert_stack is defined, and void
	  otherwise.
	(m4_divert, m4_divert_push, m4_divert_pop, m4_init): Use it.
	(m4_divert_push, m4_divert_pop, _m4_defun_epi): Don't expand the word
	  stored in _m4_divert_diversion or _m4_divert_dump.
	(m4_divert_pop): When the parameter is given, compare the symbolic
	  name with the last diversion pushed on the stack.  Previously, the
	  current diversion was compared with the numeric value of the
	  diversion given as the parameter.
	(m4_require): If the macro hasn't been expanded yet, call ...
	(_m4_require_call): this new macro.

2005-01-03  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>

	* lib/autoconf/general.m4 (_AC_INIT_PREPARE, _AC_ARG_VAR_VALIDATE):
	Workarounds for documented `case' limitations.

2005-01-03  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/autoconf.texi (Limitations of Usual Tools): Warn about
	sed 'command1;command2'.  Problem reported by Ralf Wildenhues.

2005-01-02  Paul Eggert  <eggert@cs.ucla.edu>

	* bin/autoconf.as, bin/autoheader.in, bin/autom4te.in,
	bin/autoreconf.in, bin/autoscan.in, bin/autoupdate.in,
	bin/ifnames.in, tests/mktests.sh: Update copyright date to 2005.

	Patch from Roger Leigh (with some minor changes) as follows:
	* NEWS: New macros AC_PROG_CC_C89, AC_PROG_CC_C99.
	Resurrect AC_PROG_CC_STDC.
	* doc/autoconf.texi (C Compiler): Add AC_PROG_CC_STDC,
	AC_PROG_CC_C89, AC_PROG_CC_C99.
	(Obsolete Macros): Remove AC_PROG_CC_STDC; it's no longer obsolete.
	* lib/autoconf/c.m4 (_AC_PROG_CC_C89, _AC_PROG_CC_C99, AC_PROG_CC_C89,
	AC_PROG_CC_C99): New macros.
	(AC_PROG_CC_STDC): Use them.
	(_AC_PROG_CC_STDC): Remove.
	(AC_C_PROTOTYPES): Use ac_cv_prog_cc_c89, not ac_cv_prog_cc_stdc.
	* THANKS: Add Roger Leigh.

2004-12-30  Noah Misch  <noah@cs.caltech.edu>
